package chess.engine.pieces;

/**
 * Das Enum Color repräsentiert die Farben, die in Schachfiguren verwendet werden können.
 *
 * Autor: Fabian Eilber
 */

public enum Color {
    WHITE, BLACK
}
